--- a/template/index.html
+++ b/template/index.html
@@ -29,7 +29,7 @@
 
         <!-- Logo -->
         <div class="main-logo">
-          <a href="#" class="logo">Vigilan-Pancake</a>
+          <a href="#">Vigilan-Pancake</a>
         </div>
 
         <div class="menu-search">
@@ -84,7 +84,7 @@
         <div class="grid-shuffle">
           <ul id="grid" class="row">
 
-            <li class="book-item small-12 medium-6 columns" data-groups='["classic"]' data-date-created='1937' data-title='Of Mice and Men' data-color='#fcc278'>
+            <li class="book-item small-12 medium-6 columns" data-groups='["classic","horror"]' data-date-created='1937' data-title='Of Mice and Men' data-color='#fcc278'>
               <div class="bk-img">
                 <div class="bk-wrapper">
                   <div class="bk-book bk-bookdefault">
@@ -144,7 +144,7 @@
     <footer id="footer" class="page-footer">
       <div class="row footer-wrapper">
         <div class="original-version small-12 columns"><em>Projet trop stylé.</em></div>
-        <div class="copyright small-12 columns">&copy; 2016 - <a href="http://interactivejoe.com/"  target="_blank">Vigilant-Pancake</a></div>
+        <div class="copyright small-12 columns">&copy; 2016 - Vigilant-Pancake</div>
       </div>
     </footer>
 
