--- a/web/css/style.css
+++ b/web/css/style.css
@@ -19,6 +19,7 @@ h1 {
     padding: 20px;
     text-align: center;
     text-transform: uppercase;
+    box-shadow:0px 1px 5px rgba(0,0,0,0.4);
 }
 
 #disconnect {
@@ -35,6 +36,7 @@ h1 {
 
 #disconnect:hover {
     background-color: #ffaa00;
+    box-shadow:2px 2px 5px rgba(0,0,0,0.4);
 }
 
 select, input[type="color" i][list] {
@@ -64,6 +66,7 @@ input[type="text"] {
 
 .cool_link:hover, button:hover, input[type="submit"]:hover {
     background-color: #198d98;
+    box-shadow:2px 2px 5px rgba(0,0,0,0.4);
 }
 
 table {
@@ -120,5 +123,4 @@ tr:hover {
     top: 75px;
     left: 5px;
 }
-
 
